# timizer-like

./: .gitignore  README.md
backend/: .env.example  README.md  mvnw  mvnw.cmd  mvnw.ps1  pom.xml  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/src/main/java/com/timizer/backend/: TimizerBackendApplication.java
backend/src/main/java/com/timizer/backend/cra/: CraDayEntry.java  CraDayEntryRepository.java  CraDayNotFoundException.java  CraDetailsMapper.java  CraNotFoundException.java  CraNotValidatedException.java  CraTotalCalculationService.java  CraValidatedException.java  InvalidWorkValueException.java  MonthlyCraCreationService.java  MonthlyCraReport.java  MonthlyCraReportRepository.java  ValidationStatus.java
backend/src/main/java/com/timizer/backend/health/: HealthController.java
backend/src/main/java/com/timizerlike/cra/: TimizerLikeApplication.java
backend/src/main/java/com/timizerlike/cra/config/: CraDefaultsProperties.java
backend/src/main/java/com/timizerlike/cra/model/: CraMonthlyReport.java
backend/src/main/java/com/timizerlike/cra/pdf/: CraPdfGenerator.java
backend/src/main/java/com/timizerlike/cra/service/: CraCreationService.java  CraDayUpdateService.java  CraHistoryService.java  CraPdfAssemblerService.java  CraPdfDownloadResult.java  CraPdfDownloadService.java  CraValidationService.java
backend/src/test/java/com/timizer/backend/cra/: CraDayEntryTest.java  CraDayEntryUpdateWorkValueTest.java  JpaTestConfig.java  (+5 more)
backend/src/test/java/com/timizerlike/: TimizerlikeTestConfig.java
backend/tests/: test_db.py  test_health.py
(+598 files in other folders)
